# Ncrypt

./: CMakeLists.txt  CMakePresets.json
GTest/: CMakeLists.txt  GTest.cpp  GTest.h  LoadTest.cpp
